api/manifests/cybercrime-api-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: cybercrime-api
spec: {}
status: {}
