api/manifests/cybercrime-api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cybercrime-api
  labels:
    app: cybercrime-api
  annotations:
    flux.weave.works/automated: 'true'
    flux.weave.works/tag.api: regex:master-*
  name: cybercrime-api
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cybercrime-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cybercrime-api
    spec:
      containers:
      - image: gcr.io/report-a-cybercrime-alpha/api:fix-fonts-2c909d5
        imagePullPolicy: Always
        name: cybercrime-api
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
