api/manifests/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cybercrime-api
  labels:
    app: minio-deployment
  name: minio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: minio-deployment
    spec:
      volumes:
        - name: minio-secrets
          secret:
            secretName: minio-secrets
      containers:
      - image: minio/minio
        volumeMounts:
          - name: minio-secrets
            mountPath: /gcs
            readOnly: true
        name: minio
        args: ["gateway", "gcs"]
        resources: {}
status: {}
