api/manifests/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: cybercrime-api
  labels:
    app: minio
  name: minio
spec:
  ports:
  - name: "9000"
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
  type: ClusterIP
status:
  loadBalancer: {}
