api/manifests/cybercrime-api-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cybercrime-api
  namespace: cybercrime-api
spec:
  hosts:
    - '*'
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /graphql
      route:
        - destination:
            host: cybercrime-api.cybercrime-api.svc.cluster.local
            port:
              number: 3000
